--- a/cars-mania/src/components/Cars/cars.css
+++ b/cars-mania/src/components/Cars/cars.css
@@ -1,8 +1,38 @@
 .cars{
     width: 300px;
     height: 510px;
+    border: 1px solid wheat;
+    border-radius: 8px;
+    position: relative;
+}
+.cars-name{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 25px;
+    margin-top: 7px;
 }
 .cars img{
     width: 286px;
     height: 286px;
+    border-radius: 8px;
+    margin: 7px;
+}
+.cars-info{
+    margin: 0 14px;
+}
+.cars-info p{
+    margin-bottom: 0;
+}
+.btn-car{
+    width: 100%;
+    background-color: cadetblue;
+    border: none;
+    border-radius: 0px 0px 8px 8px;
+    position: absolute;
+    bottom: 0;
+}
+.btn-car:hover{
+    background-color: darkcyan;
 }
