--- a/cars-mania/src/components/Cart/cart.css
+++ b/cars-mania/src/components/Cart/cart.css
@@ -1,5 +1,9 @@
+.cart-info{
+    display: flex;
+    gap: 10px;
+}
 .cart-info img{
-    width: 25px;
+    width: 50px;
     border-radius: 50%;
 }
 .cart-info h4{
