--- a/cars-mania/src/components/Shop/shop.css
+++ b/cars-mania/src/components/Shop/shop.css
@@ -13,3 +13,9 @@
     border: none;
     border-radius: 0px 0px 8px 8px;
 }
+.choose-again{
+    width: 100%;
+    background-color: cadetblue;
+    border: none;
+    border-radius: 0px 0px 8px 8px;
+}
